# chip8_rust

./: Cargo.toml  README.md  main
roms/ac8e_roms/: README.md
src/: main.rs
src/cpu/: instruction_set.rs  mod.rs  test.rs
src/display/: libmod.rlib  mod.rs  test.rs
src/memory/: libmod.rlib  mod.rs  test.rs
